[package]
name = "plonky2_ed25519"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
cuda = [
  "plonky2/cuda",
  "plonky2_field/cuda",
  "plonky2_cuda",
  "rustacuda",
  "rustacuda_core",
]

[dependencies]
# plonky2 = { git = "https://github.com/ahmetyalp/plonky2.git", rev = "58439c2d662bb738c0000d9141852ef3fade9b97" }
# plonky2_util = { git = "https://github.com/ahmetyalp/plonky2.git", rev = "58439c2d662bb738c0000d9141852ef3fade9b97" }
# plonky2_field = { git = "https://github.com/ahmetyalp/plonky2.git", rev = "58439c2d662bb738c0000d9141852ef3fade9b97" }
# plonky2_cuda   = { git = "https://github.com/ahmetyalp/plonky2.git", rev = "58439c2d662bb738c0000d9141852ef3fade9b97", optional = true }

itertools = { version = "0.10.0", default-features = false, features = [
  "use_alloc",
] }
num = { version = "0.4", default-features = false, features = [
  "alloc",
  "rand",
] }
rayon = "1.5.1"
serde = { version = "1.0", default-features = false, features = [
  "alloc",
  "derive",
] }
anyhow = "1.0.40"
env_logger = "0.10.0"
log = "0.4.14"
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
rand_chacha = "0.3.1"
unroll = "0.1.5"
static_assertions = "1.1.0"
clap = { version = "4.0.29", features = ["derive"] }
serde_json = "1.0"

rustacuda = { version = "0.1.3", optional = true }
rustacuda_core = { version = "0.1.2", optional = true }

plonky2 = { path = "../plonky2/plonky2" }
plonky2_util = { path = "../plonky2/util" }
plonky2_field = { path = "../plonky2/field" }
plonky2_cuda = { path = "../plonky2/cuda", optional = true }

# [profile.release]
# opt-level = 3
# #lto = "fat"
# #codegen-units = 1

# [profile.bench]
# opt-level = 3

# [profile.test]
# opt-level = 0
